Get rid of fixed header on mobile

--- a/app/assets/sass/patterns/admin-layout.scss
+++ b/app/assets/sass/patterns/admin-layout.scss
@@ -1,6 +1,8 @@
 #adminTheme {
   background: white;
-  overflow: hidden;
+  @include mq($from: tablet) {
+    overflow: hidden;
+  }
 }
 
 // body {
@@ -16,13 +18,15 @@ a:visited {
   @include govuk-font(16);
   overflow: auto;
   width: 100%;
-  height: calc(100vh - 60px);
   box-sizing: border-box;
   padding: 20px 15px;
   max-width: none;
   float: left;
   margin: 0;
   background: white;
+  @include mq($from: tablet) {
+    height: calc(100vh - 60px);
+  }
   @include mq($from: desktop) {
     width: calc(100% - 300px);
     padding: 47px 60px;
